@startuml "Flyweight - Circles - Class Diagram"
skinparam classAttributeIconSize 0
hide empty members
title Flyweight — 10,000 circles, 100 ways to look


class CircleStyle <<ConcreteFlyweight>> {
  - radius : int
  - color : Color
  - stroke : Stroke
  + draw(g2, center)
}

class CircleStyleFactory <<FlyweightFactory>> {
  - styles : Map<String, CircleStyle>
  + getStyle(radius, color) : CircleStyle
  + distinctStyles() : int
}

class Circle {
  - center : Point
  + draw(g2)
  + moveTo(point)
}

class Point <<record>> {
  x : int
  y : int
}

class CircleField {
  + populate(count)
  + scatter()
}

class CirclesCanvas
class CirclesFrame

Circle o--> CircleStyle : "shared"
Circle *--> Point : "its own"
CircleStyleFactory ..> CircleStyle
CircleField o-- Circle
CircleField --> CircleStyleFactory
CirclesCanvas --> CircleField
CirclesFrame *-- CirclesCanvas

note right of CircleStyle
  <b>draw(g2, center)</b> — the position is
  a parameter, so one style object is
  every circle that looks like this.

  10 radii x 10 colors = <b>100</b> styles,
  whether there are 10,000 circles or
  a million.
end note

note bottom of CircleField
  <b>scatter()</b> moves all 10,000 circles
  and allocates <b>nothing</b>: only
  positions change.
end note

@enduml
